--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "careermind-client",
   "version": "1.0.0",
   "private": true,
+  "proxy": "https://career-bnao-ai-1.onrender.com",
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -13,7 +14,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
-  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
     "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
